--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,28 +8,34 @@
 }
 
 .nav{
-    display: flex;
-    justify-content: space-between;/*dejo un espacio en el medio*/
-    padding: 10px;
-    max-width: 1000px;/*ancho maximo, despues de eso se centra*/
+    justify-items: center;
     margin: 0 auto;/*0 arriba y abajo, automatico a los costados*/
 }
 
 /*logotipo*/
 .logotipo{
+    justify-content: center;
+    padding: 20px 20px 1px 20px;
     display: flex;
     align-items: center; 
-    font-size: 25px;
+    font-size: 35px;
     color: var(--color_texto_secundario);
     font-weight: 500;
 }
 
 .logotipo img{
+    
     border-radius: 50%; /*imagen redonda*/
+    border: 2px solid ;
 }
 
 #nombre{
     padding: 10px;
+}
+
+.nav p{
+    font-size: 20px;
+    color: var(--color_texto);
 }
 
 /*menu*/
@@ -38,18 +44,23 @@
     list-style: none;   /*saco las viñetas*/
     margin: 0;  /*reseteo los margenes y padding*/
     padding: 0;
-}
-
-.menu li{
-    padding: 0px 15px;
+    justify-content:space-around
 }
 
 .menu a{
     color: var(--color_texto);
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 500;
-    line-height: 75px;/*alto de linea de texto para centrarlo horizontalmente*/
+    line-height: 65px;/*alto de linea de texto para centrarlo horizontalmente*/
     text-transform: uppercase;
+    padding: 10px;
+    margin: 0px;
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
+#mi_perfil{
+    padding-top: 80px;
 }
 
 form{
@@ -78,12 +89,11 @@ form{
 
 }
 
+#email{
+    margin-bottom: 10px;
+}
 
-@media (max-width: 850px) {
-
-    body{
-        padding-top: 300px;
-    }
+@media (max-width: 950px) {
 
     .nav{
         display: flex;
@@ -94,19 +104,16 @@ form{
     }
     
     .menu{  
+       
         flex-direction: column;
         position: fixed;
         left: 0;
         top: 0;
-        margin-top: 100px;
+        margin-top: 185px;
         width: 100%;
         align-items: center;
         background-color: var(--color_disp_movil);
         
-    }
-
-    .menu li{
-        padding: 0px;
     }
 
     .menu a{
@@ -115,9 +122,13 @@ form{
         font-weight: 500;
         line-height: 50px;
         text-transform: uppercase;
-        padding: 1px;
+        padding: 10px;
         margin: 0px;
-        
+        border: 1px solid black;
+        border-radius: 8px;
+    }
+    #mi_perfil{
+        padding-top: 410px;
     }
 
     .form {
@@ -134,6 +145,9 @@ form{
         display: flex;
         white-space: initial;
         min-height: 100px;
+    }
+    #email{
+        margin-bottom: 5px;
     }
 }
 
